# libfoobar

./: .gitignore  Makefile.am  README.md  configure.ac  libtool
docs/: Makefile.am
docs/doxygen/: Doxyfile.in
example/: Makefile.am  main.c
include/: Makefile.am
include/foobar/: reverse.h
src/: Makefile.am  reverse.c
